<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/note_action_toolbar"
    android:layout_width="match_parent"
    android:layout_height="@dimen/formatting_toolbar_height"
    android:background="?android:windowBackground"
    android:gravity="center_vertical"
    android:orientation="horizontal"
    android:paddingStart="@dimen/formatting_toolbar_padding_horizontal"
    android:paddingEnd="@dimen/formatting_toolbar_padding_horizontal"
    android:layout_marginTop="1dp">

    <ImageView
        android:id="@+id/action_format"
        android:layout_width="@dimen/formatting_button_touch_target"
        android:layout_height="match_parent"
        android:padding="@dimen/formatting_button_padding"
        android:src="@drawable/ic_format_text"
        android:tint="@color/bottom_toolbar_icon_tint"
        android:contentDescription="@string/format_formatting"
        android:background="@drawable/bg_formatting_button"
        android:scaleType="centerInside" />

    <ImageView
        android:id="@+id/action_attach"
        android:layout_width="@dimen/formatting_button_touch_target"
        android:layout_height="match_parent"
        android:padding="@dimen/formatting_button_padding"
        android:src="@drawable/ic_attach_file"
        android:tint="@color/bottom_toolbar_icon_tint"
        android:contentDescription="@string/format_attach_file"
        android:background="@drawable/bg_formatting_button"
        android:scaleType="centerInside" />

    <ImageView
        android:id="@+id/action_archive"
        android:layout_width="@dimen/formatting_button_touch_target"
        android:layout_height="match_parent"
        android:padding="@dimen/formatting_button_padding"
        android:src="@drawable/ic_archive"
        android:tint="@color/bottom_toolbar_icon_tint"
        android:contentDescription="@string/archive_note"
        android:background="@drawable/bg_formatting_button"
        android:scaleType="centerInside" />

    <ImageView
        android:id="@+id/action_trash"
        android:layout_width="@dimen/formatting_button_touch_target"
        android:layout_height="match_parent"
        android:padding="@dimen/formatting_button_padding"
        android:src="@drawable/ic_delete"
        android:tint="@color/bottom_toolbar_icon_tint"
        android:contentDescription="@string/move_to_trash"
        android:background="@drawable/bg_formatting_button"
        android:scaleType="centerInside" />

    <ImageView
        android:id="@+id/action_delete"
        android:layout_width="@dimen/formatting_button_touch_target"
        android:layout_height="match_parent"
        android:padding="@dimen/formatting_button_padding"
        android:src="@drawable/ic_delete_forever"
        android:tint="@color/bottom_toolbar_icon_tint"
        android:contentDescription="@string/delete_permanently"
        android:background="@drawable/bg_formatting_button"
        android:scaleType="centerInside" />

</LinearLayout>
