<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:id="@+id/root">

    <include layout="@layout/layout_toolbar"
        android:id="@+id/toolbar"/>

    <org.skynetsoftware.skeletonnotes.widget.ImageGridLayout
        android:id="@+id/note_images"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:imageTargetRowHeight="@dimen/note_images_row_height_detail"
        android:paddingStart="@dimen/note_detail_padding_horizontal"
        android:paddingEnd="@dimen/note_detail_padding_horizontal"
        android:paddingTop="@dimen/note_detail_padding_horizontal" />

    <LinearLayout
        android:id="@+id/note_attachments"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:visibility="gone"
        android:paddingStart="@dimen/note_detail_padding_horizontal"
        android:paddingEnd="@dimen/note_detail_padding_horizontal"
        android:paddingTop="@dimen/note_detail_padding_horizontal" />

    <EditText
        android:id="@+id/edit_note_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/note_detail_title_hint"
        android:singleLine="true"
        android:paddingStart="@dimen/note_detail_padding_horizontal"
        android:paddingEnd="@dimen/note_detail_padding_horizontal"
        android:paddingTop="@dimen/note_detail_padding_horizontal"
        android:textSize="@dimen/toolbar_title_size"
        android:textStyle="bold"
        android:textColor="?android:textColorPrimary"
        android:background="@null"
        android:inputType="textCapSentences"
        android:maxLines="1"
        android:layout_marginBottom="@dimen/note_detail_title_margin_bottom"
        android:importantForAutofill="no" />

    <org.skynetsoftware.skeletonnotes.note.RichEditText
        android:id="@+id/edit_note_content"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:hint="@string/note_detail_content_hint"
        android:gravity="top"
        android:inputType="textMultiLine|textCapSentences"
        android:paddingStart="@dimen/note_detail_padding_horizontal"
        android:paddingEnd="@dimen/note_detail_padding_horizontal"
        android:textSize="@dimen/note_preview_size"
        android:textColor="?android:textColorPrimary"
        android:scrollbars="vertical"
        android:fadeScrollbars="false"
        android:background="@null"
        android:importantForAutofill="no"/>

    <include layout="@layout/formatting_toolbar"
        android:id="@+id/formatting_toolbar"/>

    <include layout="@layout/note_detail_action_toolbar"
        android:id="@+id/note_action_toolbar"/>

</LinearLayout>
