...
        android:src="@drawable/ic_arrow_back"
        android:tint="?android:textColorPrimary"
        android:visibility="gone"
        tools:visibility="visible" />

    <TextView
        android:id="@+id/toolbar_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/toolbar_icon_margin"
        android:layout_weight="1"
        android:ellipsize="end"
        android:lines="1"
...
        android:background="?android:selectableItemBackgroundBorderless"
        android:contentDescription="@string/toolbar_add_note"
        android:src="@drawable/ic_add_note"
        android:tint="?android:textColorPrimary" />

    <ImageView
        android:id="@+id/toolbar_settings"
        android:layout_width="@dimen/toolbar_icon_size"
        android:layout_height="@dimen/toolbar_icon_size"
        android:background="?android:selectableItemBackgroundBorderless"
        android:contentDescription="@string/settings_title"
        android:src="@drawable/ic_settings"
        android:tint="?android:textColorPrimary" />
...
